[tool.poetry]
name = "python-de-tukuru-taiwa-system"
version = "0.1.0"
description = "pytで作る対話システムのパッケージ"
authors = ["ykenkou001 <ykenkou001@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
