[tool.poetry]
name = "python-de-tukuru-taiwa-system"
version = "0.1.0"
description = "pythonで作る対話システム"
authors = ["ykenkou001 <ykenkou001@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
numpy = "^1.20.2"
mecab-python3 = "^1.0.3"
python-telegram-bot = "12.8"
PySide2 = "^5.15.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
isort = "^5.8.0"
flake8 = "^3.9.1"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
